--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ db.sqlite3
 music_school_db_data.json
 db.json
 db1.json
+templates/catalog/index_legacy.html
+templates/catalog/song_list.html
+templates/base_legacy.html
