--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 asgiref==3.7.2
 crispy-bootstrap5==0.7
+dj-database-url==2.1.0
 Django==4.2.5
 django-crispy-forms==2.0
 django-debug-toolbar==4.2.0
 django-filter==23.3
+flake8==6.1.0
+mccabe==0.7.0
+pycodestyle==2.11.1
+pyflakes==3.1.0
+python-dotenv==1.0.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
