--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ django-debug-toolbar==4.2.0
 django-filter==23.3
 flake8==6.1.0
 mccabe==0.7.0
+psycopg2==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.1.0
 python-dotenv==1.0.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
+whitenoise==6.6.0
