--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ django-crispy-forms==2.0
 django-debug-toolbar==4.2.0
 django-filter==23.3
 flake8==6.1.0
+gunicorn==21.2.0
 mccabe==0.7.0
+packaging==23.2
 psycopg2==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.1.0
